@@ -9,6 +9,7 @@
 #
 [greeter]
 #background=
+#show-language-selector=false
 #theme-name=
 #font-name=
 #xft-antialias=
