@@ -71,7 +71,7 @@ update_languages (void)
                 continue;
 
             /* Ignore the non-interesting languages */
-            if (strcmp (code, "C") == 0 || strcmp (code, "POSIX") == 0)
+            if (strcmp (code, "C") == 0 || g_str_has_prefix (code, "C.") || strcmp (code, "POSIX") == 0)
                 continue;
 
             language = g_object_new (LIGHTDM_TYPE_LANGUAGE, "code", code, NULL);
@@ -94,13 +94,16 @@ update_languages (void)
  *
  * Return value: (transfer none): The current language or #NULL if no language.
  **/
-const LightDMLanguage *
+LightDMLanguage *
 lightdm_get_language (void)
 {
     const gchar *lang;
     GList *link;
 
     lang = g_getenv ("LANG");
+    if (!lang)
+        return NULL;
+
     for (link = lightdm_get_languages (); link; link = link->next)
     {
         LightDMLanguage *language = link->data;
@@ -164,7 +167,9 @@ lightdm_language_get_name (LightDMLanguage *language)
 #ifdef _NL_IDENTIFICATION_LANGUAGE
         priv->name = g_strdup (nl_langinfo (_NL_IDENTIFICATION_LANGUAGE));
 #else
-        priv->name = g_strdup ("Unknown");
+        priv->name = g_strdup (priv->code);
+        if (strchr (priv->name, '_'))
+            *strchr (priv->name, '_') = '\0';
 #endif
         setlocale(LC_ALL, current);
     }
@@ -196,7 +201,14 @@ lightdm_language_get_territory (LightDMLanguage *language)
 #ifdef _NL_IDENTIFICATION_TERRITORY
         priv->territory = g_strdup (nl_langinfo (_NL_IDENTIFICATION_TERRITORY));
 #else
-        priv->territory = g_strdup ("Unknown");
+        if (strchr (priv->code, '_'))
+        {
+            priv->territory = g_strdup (strchr (priv->code, '_') + 1);
+            if (strchr (priv->territory, '.'))
+                *strchr (priv->territory, '.') = '\0';
+        }      
+        else
+            priv->territory = g_strdup ("");        
 #endif
         setlocale(LC_ALL, current);
     }
