@@ -45,7 +45,7 @@ GType lightdm_language_get_type (void);
 
 GList *lightdm_get_languages (void);
 
-const LightDMLanguage *lightdm_get_language (void);
+LightDMLanguage *lightdm_get_language (void);
 
 const gchar *lightdm_language_get_code (LightDMLanguage *language);
 
