@@ -8,6 +8,7 @@ Overview of changes in lightdm 0.9.8
       support various display types
     * Add ability to set the language of a user from the greeter
     * Set LANG variable based on the user language
+    * Add language selector into GTK greeter (disabled by default)
 
 Overview of changes in lightdm 0.9.7
 
